--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-flexbox-grid": "^1.1.5",
+    "react-redux": "^5.0.6",
     "react-scripts": "1.0.12",
     "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "shortid": "^2.2.8"
   },
   "scripts": {
