--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react-scripts": "1.0.12",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.7.2",
+    "redux-form": "^7.0.3",
+    "redux-form-material-ui": "^4.2.0",
+    "redux-form-submit": "^0.1.3",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "shortid": "^2.2.8"
