--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "funnel-cloud-test",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=7.5.0}",
+  },
   "dependencies": {
     "cross-env": "^5.0.5",
     "lodash": "^4.17.4",
