--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">=7.5.0}",
+    "node": "~7.5.0",
+    "yarn": "0.28.4"
   },
   "dependencies": {
     "cross-env": "^5.0.5",
